<resources>
    <string name="send_logs_to_developer_fab" translatable="false">sendLogsToDeveloperFab</string>
    <string name="filter_logs_fab" translatable="false">filter_logs_fab</string>
    <string name="clear_logs_fab" translatable="false">clear_logs_fab</string>
    <string name="main_fab" translatable="false">main_fab</string>

    <string name="app_name">Loggy</string>
    <string name="title_logs">Logs</string>
    <string name="title_send_logs">Send logs to developer</string>
    <string name="title_erase_logs">Erase logs</string>
    <string name="title_logs_only_errors">Show only errors</string>
    <string name="title_logs_non_main_thread">Only non-main-thread issues</string>
    <string name="title_hide_lifecycle_event">Hide lifecycle events</string>
    <string name="title_log_list_is_empty">No logs found</string>
    <string name="title_loading">Loading</string>
    <string name="io_error">Something wrong with file system!</string>
    <string name="sending_logs_successful">Logs are successfully sent!</string>
    <string name="error_sending_logs">Logs haven\'t been successfully sent!</string>
    <string name="subject">Logs of %s (application: %s)</string>
    <string name="title_filter">Filter</string>
    <string name="error_parsing_logs">There is (are) log(s) which can\'t be parsed.</string>
</resources>